export enum CommandeStatut {
  EN_ATTENTE_ACOMPTE = 'EN_ATTENTE_ACOMPTE',
  EN_PREPARATION = 'EN_PREPARATION',
  PRETE = 'PRETE',
  FINALISEE = 'FINALISEE',
}
