export enum CommandeType {
  SUR_PLACE = 'SUR_PLACE',
  A_DISTANCE = 'A_DISTANCE',
}
