export enum PaiementType {
  ACOMPTE = 'ACOMPTE',
  SOLDE = 'SOLDE',
}
