export enum Role {
  DIRECTEUR = 'DIRECTEUR',
  COMMERCIAL = 'COMMERCIAL',
  COLLECTEUR = 'COLLECTEUR',
}
